Add a shared data between test helpers. #215

--- a/test/Launcher_AcceptanceHelperOne/wwwroot/Launcher_AcceptanceHelperOne/Master.html
+++ b/test/Launcher_AcceptanceHelperOne/wwwroot/Launcher_AcceptanceHelperOne/Master.html
@@ -34,4 +34,10 @@
             <span>BOTTOM RIGHT</span>
         </div>
     </div>
+    <template is="dom-bind">
+        <h2>This is Launcher Acceptance Helper One</h2>
+        <p>
+            This is a shared thing: <input type="text" value="{{model.SharedValue.Description$::input}}" />
+        </p>
+    </template>
 </template>
