--- a/src/Launcher/wwwroot/Launcher/elements/tu-layout/tu-layout-multiview.html
+++ b/src/Launcher/wwwroot/Launcher/elements/tu-layout/tu-layout-multiview.html
@@ -105,12 +105,14 @@
           var notedActive = this.apps[i].data.Active$;
           if (!this._activeApp && notedActive)
             this._activeApp = this.apps[i].name;
-          if (notedActive && this._activeApp != this.apps[i].name) {
-            var str = 'data.'+this.apps[i].name+".Active$";
-            this.async( function() {
-              this.set(str, false);
-              window.tu.puppetDirtyCheck();
-            });
+          if (this._activeApp != this.apps[i].name) {
+            if (notedActive) {
+              var str = 'data.'+this.apps[i].name+".Active$";
+              this.async( function() {
+                this.set(str, false);
+                window.tu.puppetDirtyCheck();
+              });
+            }
             this.set('apps.#'+i+'.active', false);
           }
           else if (notedActive && this._activeApp == this.apps[i].name && !this.apps[i].active) {
