Use inhrit color and opacity for seartch text.

--- a/src/Launcher/wwwroot/Launcher/elements/launcher-search/launcher-search.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-search/launcher-search.html
@@ -16,22 +16,22 @@
           outline: none;
           background: transparent;
           outline: none;
-          color: #FFF;
+          color: inherit;
           font-weight: 200;
           padding-left:10px;
           font-size: 14px;
         }
 
         input::-webkit-input-placeholder {
-          color:rgba(255,255,255,.5);
+          opacity: 0.5;
         }
 
         input::-moz-placeholder {
-          color:rgba(255,255,255,.5);
+          opacity: 0.5;
         }
 
         input:-ms-input-placeholder {
-          color:rgba(255,255,255,.5);
+          opacity: 0.5;
         }
 
         div.preview {
