Added a tu prefix for splash class name.

--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -58,9 +58,9 @@
     <link rel="shortcut icon" href="/Launcher/favicon.ico" />
 </head>
 <body is="launcher-main" class="loading">
-    <div id="splash">
-        <span id="splash-text">LOADING</span>        
-        <span id="splash-spinner">⚇</span>
+    <div id="tu-splash">
+        <span id="tu-splash-text">LOADING</span>        
+        <span id="tu-splash-spinner">⚇</span>
     </div>
     <template id="root-launcher-dom-bind" is="dom-bind">
         <template is="dom-if" restamp if="{{model.editingMode$}}">
