Load client theme style.

--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -54,12 +54,12 @@
     <!-- Style sheets -->
     <!--<link rel="import" href="/sys/bootstrap.html" />-->
     <link rel="stylesheet" href="/Launcher/css/style.css" />
-
+    <link rel="stylesheet" href="/signin/clienttheme/style.css" />
     <link rel="shortcut icon" href="/Launcher/favicon.ico" />
 </head>
 <body is="launcher-main" class="loading">
     <div id="tu-splash">
-        <span id="tu-splash-text">LOADING</span>        
+        <span id="tu-splash-text">LOADING</span>
         <span id="tu-splash-spinner">⚇</span>
     </div>
     <template id="root-launcher-dom-bind" is="dom-bind">
