Clean toggle editor behavior
Starcounter/RebelsLounge/issues/32
Starcounter/EpicDemo/issues/12

--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -42,10 +42,6 @@
 </head>
 <body is="launcher-main">
     <template id="root-launcher-dom-bind" is="dom-bind">
-        <template is="dom-if" restamp if="{{model.editingMode$}}">
-            <div class="launcher-toolbar launcher-topbar">&nbsp;</div>
-        </template>
-
         <div class="launcher-toolbar launcher-topbar">
             <a href="/launcher"><i id="homeIcon" class="glyphicon glyphicon-home"></i></a>
             <div class="launcher-theme">
@@ -63,10 +59,10 @@
             <template is="imported-template" content$="{{model.user.Launcher.MergedHtml}}" model="{{model.user}}"></template>
 
             <template is="dom-if" restamp if="{{!model.layoutModified$}}">
-                <paper-icon-button id="settings" active="{{model.editingMode$}}" src="/Launcher/images/layout-editor.svg" on-click="toggleEditor"></paper-icon-button>
+                <paper-icon-button id="settings" active="{{model.editingMode$}}" src="/Launcher/images/layout-editor.svg" toggles></paper-icon-button>
             </template>
             <template is="dom-if" restamp if="{{model.layoutModified$}}">
-                <paper-icon-button id="settings" active="{{model.editingMode$}}" src="/Launcher/images/layout-editor-unsaved.svg" on-click="toggleEditor" class="modified" title="You have unsaved layout changes on this page!"></paper-icon-button>
+                <paper-icon-button id="settings" active="{{model.editingMode$}}" src="/Launcher/images/layout-editor-unsaved.svg" toggles class="modified" title="You have unsaved layout changes on this page!"></paper-icon-button>
             </template>
 
             <a href="/launcher/settings"><img id="launcher-settings-icon" src="/Launcher/images/cog.svg" /></a>
@@ -105,11 +101,9 @@
 
         <!-- TODO migrate this getModel -->
         <launcher-hot-key keys="Ctrl+E" on-keypress="toggleEditor"></launcher-hot-key>
-        <launcher-hot-key keys="Esc" onkeypress="toggleEditor"></launcher-hot-key>
+        <launcher-hot-key keys="Esc" on-keypress="closeEditor"></launcher-hot-key>
         <template is="dom-if" restamp if="{{model.editingMode$}}">
-            <div id="elementSettings" class="launcher-topbar">
-                <template is="imported-template" model="{{model}}" content="/Launcher/viewmodels/LayoutEditor.html"></template>
-            </div>
+            <template is="imported-template" model="{{model}}" content="/Launcher/viewmodels/LayoutEditor.html"></template>
         </template>
 
         <paper-dialog opened="{{model.ConnectionError}}" modal="true">
