--- a/src/Launcher/wwwroot/Launcher/viewmodels/LayoutEditor.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LayoutEditor.html
@@ -3,7 +3,9 @@
 
 <template>
     <template is="dom-bind">
-        <h3>Edit your partial</h3>
-        <starcounter-layout-html-editor></starcounter-layout-html-editor>
+        <div id="launcher-layout-editor" class="launcher-topbar">
+            <h3>Edit your partial</h3>
+            <starcounter-layout-html-editor></starcounter-layout-html-editor>
+        </div>
     </template>
 </template>
