Add workaround for ace editors conflict,
- (br)ace loaded by JSONEditor (juicy-jsoneditor)
- ace loaded by juicy-ace-editor

--- a/src/Launcher/wwwroot/Launcher/viewmodels/LayoutEditor.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LayoutEditor.html
@@ -1,5 +1,6 @@
 ﻿<!-- <link rel="import" href="/sys/juicy-tile-editor/src/juicy-tile-simple-editor.html" /> -->
 ﻿<link rel="import" href="/sys/starcounter-layout-html-editor/starcounter-layout-html-editor.html" />
+<script src="/sys/ace-builds/src-noconflict/mode-html.js"></script>
 
 <template>
     <template is="dom-bind">
