--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-simple-editor.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-simple-editor.html
@@ -136,7 +136,7 @@ MIT
                             Unbox
                         </button>
                         <div class="btn-group">
-                            <select class="btn btn-left"  on-change="_choosePredefinedSetup" title="Select the element that will control the layout of this group">
+                            <select class="btn btn-left predefined-setup-picker"  on-change="_choosePredefinedSetup" title="Select the element that will control the layout of this group">
                                 <!-- <option value="" title="subgrid/virtual group">parent conatiner</option> -->
                                 <option title="tight group">juicy-tile-table</option>
                                 <template is="dom-repeat" items="{{predefinedSetups}}">
